--- a/server/TS/tsconfig.json
+++ b/server/TS/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
+    "sourceMap": true,
     "module": "commonjs",
     "baseUrl": "./",
-    "outDir": "build",
+    "outDir": "../../server",
     "target": "es6",
     "moduleResolution": "node",
     "esModuleInterop": true,
@@ -11,7 +12,7 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": [
-    "**.ts"
+    "./**/*.ts"
   ],
   "exclude": [
     "./node_modules"
