--- a/server/TS/package.json
+++ b/server/TS/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.6",
+    "@types/lodash": "^4.14.155",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
