--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,14 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "@types/express": "^4.17.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lodash": "^4.17.15",
-    "nodemon": "^2.0.4",
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "@types/node": "^14.0.6"
+    "@types/node": "^14.0.6",
+    "@types/express": "^4.17.6",
+    "nodemon": "^2.0.4"
   }
 }
