--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
+    "firebase": "^7.15.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
