--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "proxy": "http://localhost:4000",
   "private": true,
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -15,11 +16,15 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
+    "@types/react-redux": "^7.1.9",
     "firebase": "^7.15.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "styled-components": "^5.1.1"
   },
   "scripts": {
